# ros-robotics-skill

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.en.md  README.md  SKILL.md  install.ps1  install.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
agents/: openai.yaml
docs/: COMPATIBILITY.md  INSTALL.md
examples/: case-studies.md
examples/minimal_ws/: README.md
examples/minimal_ws/src/minimal_demo/: CMakeLists.txt  package.xml
examples/minimal_ws/src/minimal_demo/config/: demo_params.yaml
examples/minimal_ws/src/minimal_demo/include/minimal_demo/: talker.hpp
examples/minimal_ws/src/minimal_demo/launch/: demo.launch.py
examples/minimal_ws/src/minimal_demo/src/: listener.cpp  talker.cpp
integrations/gemini/commands/: ros-robotics.md
references/: custom-interfaces.md  dds-qos-networking.md  debug-playbooks.md  docker-ros.md  foxglove-visualization.md  gazebo-simulation.md  interop-and-migration.md  lifecycle-and-components.md  micro-ros-and-embedded.md  moveit2.md  multi-robot.md  navigation2.md  open-source-publishing.md  review-checklist.md  robot-description-and-tf.md  ros1-catkin.md  ros2-cicd.md  ros2-colcon.md  ros2-control.md  rosbag-diagnostics.md  slam-mapping.md
scripts/: check_ros_workspace_consistency.py  check_tf_tree.py  detect_ros_workspace.py  install.py  validate_project.py
tests/: test_check_ros_workspace_consistency.py  test_detect_ros_workspace.py  test_install.py
